# Cyber-Sierra-FullStack-Challenge

./: .gitignore  Makefile  README.md
backend/: .env.example  main.py  models.py  pyproject.toml  shell.nix
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routers/: data.py  feedback.py  history.py  query.py  upload.py
backend/services/: ai_pipeline.py  db.py  session_store.py
backend/tests/: conftest.py  test_data.py  test_feedback.py  test_history.py  test_pipeline.py  test_query.py  test_upload.py
docs/superpowers/specs/: 2026-05-13-ai-csv-app-design.md
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/components/: DataPreview.tsx  FileUpload.tsx  HistoryPanel.tsx  QueryInterface.tsx  SheetTabs.tsx
frontend/lib/: api.ts
